- use new Strings.CI/CS methods instead of deprecated ones